# sketch_bot_core

./: CMakeLists.txt  package.xml  readme.MD
gcode/: apple.gcode
include/sketch_bot_core/: gcode.h  robot_control.h
launch/: demo.launch.py  rviz_and_movegroup.launch.py  sketch.launch.py
rviz/: moveit.rviz  view_robot.rviz
src/: gcode.cpp  plot.cpp  robot_control.cpp  sketch.cpp
